--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -15,7 +15,7 @@
                         <div class="col-md-12 form-group">
                             <label for="banner">Banner</label>
                             <img src="{% static 'images/default-preview.png' %}" alt="Image" class="img-fluid mb-5" id="bannerImage" />
-                            <input id="imageUpload" type="file" name="banner_image" placeholder="Photo" capture required>
+                            <input id="imageUpload" type="file" name="banner_image" placeholder="Photo" required>
                         </div>
                         <div class="col-md-12 form-group">
                             <label for="content">Overview <small>(For SEO Preview)</small> </label>
