--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -43,7 +43,7 @@
                             </select>
                         </div>
                         <div class="col-md-6 form-group">
-                            <input type="checkbox" id="published" name="published" value="True">
+                            <input type="checkbox" id="published" name="published" value="True" checked>
                             <label for="published"> Published</label><br>
                         </div>
                         <div class="col-md-6 form-group" id="series_select">
