Embed Product Hunt

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -170,6 +170,7 @@
                   ></a>
                 </div>
               {% endif %}
+              
               <div class="col-3 search-top">
                 <!-- <a href="#"><span class="fa fa-search"></span></a> -->
                 <form
@@ -325,6 +326,8 @@
               <a href="{{links.twitter}}"><span class="fa fa-twitter">&nbsp;&nbsp;</span></a>
               <a href="{{links.facebook}}"><span class="fa fa-facebook"></span>&nbsp;&nbsp;</a>
               <a href="{{links.instagram}}"><span class="fa fa-instagram"></span>&nbsp;&nbsp;</a>
+              <br>
+              <a href="https://www.producthunt.com/posts/iread?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-iread" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=304112&theme=light" alt="iRead - Where dynamic ideas find you | Product Hunt" style="margin-top:20px;width: 250px; height: 54px;" width="250" height="54" /></a>
               <p class="small">
                 <br>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
