--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -270,5 +270,12 @@
         }
       })
     })
-  </script>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script>
+      function addDarkmodeWidget() {
+      new Darkmode().showWidget();
+   }
+   window.addEventListener('load', addDarkmodeWidget);
+   </script>
+</script>
 {% endblock js_down %}
