--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -217,5 +217,12 @@
     })
     createCookie("alerted", "yes", 1); // cookies expire after 1 day
   }
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
 </script>
 {% endblock js_down %}
