--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -218,7 +218,7 @@
     createCookie("alerted", "yes", 1); // cookies expire after 1 day
   }
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-  <script src="static/js/script.js"></script>
+  <script src="iRead/static/js/script.js"></script>
   <script>
   function addDarkmodeWidget() {
     new Darkmode().showWidget();
