--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -28,7 +28,7 @@
 
 {% block js_down %}
   <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-  <script src="static/js/script.js"></script>
+  <script src="iRead/script.js"></script>
   <script>
   function addDarkmodeWidget() {
     new Darkmode().showWidget();
