--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -120,6 +120,20 @@
         animation: none !important;
         border-width: 0 !important;
       }
+      ::-webkit-scrollbar{
+        width: 15px;
+      }
+      ::-webkit-scrollbar-track{
+        background-color: #4f4f4f;
+        border-radius: 35px;
+      }
+      ::-webkit-scrollbar-thumb{
+        background: #6610f2;
+        border-radius: 35px;
+      }
+      ::-webkit-scrollbar-thumb:hover{
+        background: #7600d1;
+      }
     </style>
   </head>
   <body>
