--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -21,6 +21,11 @@
     <meta property="og:title" content="{{series.name}} | iRead" />
     <meta property="og:description" content="{{series.desc}}" />
     <meta property="og:image" content="{% static 'images/favicon.png' %}" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@iReadBot">
+    <meta name="twitter:title" content="{{post.title}} | iRead">
+    <meta name="twitter:description" content="{{post.seo_overview}}">
+    <meta name="twitter:image" content="{{post.thumbnail.url}}">
     {% else %}
     <meta property="og:title" content="{{title}}" />
     <meta
@@ -120,7 +125,7 @@
         animation: none !important;
         border-width: 0 !important;
       }
-      ::-webkit-scrollbar{
+/*       ::-webkit-scrollbar{
         width: 15px;
       }
       ::-webkit-scrollbar-track{
@@ -133,7 +138,7 @@
       }
       ::-webkit-scrollbar-thumb:hover{
         background: #7600d1;
-      }
+      } */
     </style>
   </head>
   <body>
