Fix Twitter Post

--- a/templates/authentication/edit_profile.html
+++ b/templates/authentication/edit_profile.html
@@ -105,8 +105,8 @@
                       <input type="url" id="medium" name="medium" class="form-control" value="{{user.social_links.medium_url}}" >
                     </div>
                     <div class="col-md-6 form-group">
-                      <label for="twitter">Twitter URL</label>
-                      <input type="url" id="twitter" name="twitter" class="form-control" value="{{user.social_links.twitter_url}}">
+                      <label for="twitter">Twitter Username</label>
+                      <input type="text" id="twitter" name="twitter" class="form-control" value="{{user.social_links.twitter_username}}">
                     </div>
                     <div class="col-md-6 form-group">
                       <label for="linkedin">LinkedIn URL</label>
