--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -87,8 +87,8 @@
                         {% if user.social_links.medium_url %}
                           <a href="{{user.social_links.medium_url}}"><i class="fa fa-medium" aria-hidden="true"></i></a>
                         {% endif %}
-                        {% if user.social_links.twitter_url %}
-                          <a href="{{user.social_links.twitter_url}}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        {% if user.social_links.twitter_username %}
+                          <a href="https://twitter.com/{{user.social_links.twitter_username}}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         {% endif %}
                         {% if user.social_links.linkedin_url %}
                           <a href="{{user.social_links.linkedin_url}}"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
