--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -300,7 +300,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link bulletin" id="bulletin" style="cursor: pointer"
+                  <a class="nav-link" id="bulletin" href="https://www.getrevue.co/profile/iReadBlog" target="_blank" style="cursor: pointer"
                     >Bulletins</a
                   >
                 </li>
@@ -412,7 +412,7 @@
         title: 'Enjoy Our Bulletins',
         html: `
         <br>
-        <a href="http://feeds.feedburner.com/ireadblog" title="Subscribe to my feed" rel="alternate" type="application/rss+xml"><img src="https://feedburner.google.com/fb/images/pub/feed-icon32x32.png" alt="" style="border:0"/></a><a href="http://feeds.feedburner.com/ireadblog" title="Subscribe to iRead feed" rel="alternate" type="application/rss+xml"> Subscribe in a reader</a>
+        <a href="http://feeds.feedburner.com/ireadblog" title="Subscribe to our feed" rel="alternate" type="application/rss+xml"><img src="https://feedburner.google.com/fb/images/pub/feed-icon32x32.png" alt="" style="border:0"/></a><a href="http://feeds.feedburner.com/ireadblog" title="Subscribe to iRead feed" rel="alternate" type="application/rss+xml"> Subscribe in a reader</a>
         <p class="mt-3"><strong>OR</strong></p>
         <form action="" method="POST" id="bltForm">
           {% csrf_token %}
