--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -9,11 +9,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta
-      name="description"
-      content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic."
-    />
+    
     {% if meta_post %}
+    <meta name="description" content="{{post.seo_overview}}" />
     <meta property="og:title" content="{{post.title}} | iRead" />
     <meta property="og:description" content="{{post.seo_overview}}" />
     <meta property="og:image" content="{{post.thumbnail.url}}" />
