--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -518,5 +518,6 @@
       </script>
     {% endif %}
     {% block js_down %} {% endblock js_down %}
+    <script type="text/javascript"> var infolinks_pid = 3348493; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
   </body>
 </html>
