Add Google Analytics

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -138,6 +138,16 @@
         background: #7600d1;
       } */
     </style>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9XT85E9BF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-W9XT85E9BF');
+    </script>
   </head>
   <body>
     <!-- Messenger Chat Plugin Code -->
