--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -94,6 +94,28 @@
   </div>
   <!-- End Twitter -->
   {% endif %}
+
+  <div class="sidebar-box">
+    <h3 class="heading">Advertisements</h3>
+    {% if meta_post %}
+    <script type="text/javascript">amzn_assoc_ad_type ="responsive_search_widget"; amzn_assoc_tracking_id ="ireadblog-21"; amzn_assoc_marketplace ="amazon"; amzn_assoc_region ="IN"; amzn_assoc_placement =""; amzn_assoc_search_type = "search_widget";amzn_assoc_width ="auto"; amzn_assoc_height ="auto"; amzn_assoc_default_search_category =""; amzn_assoc_default_search_key ="";amzn_assoc_theme ="dark"; amzn_assoc_bg_color ="000000"; </script><script src="//z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN"></script>
+    <br>
+    <script type="text/javascript" language="javascript">
+      var aax_size='300x600';
+      var aax_pubname = 'ireadblog-21';
+      var aax_src='302';
+    </script>
+    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    {% else %}
+    <script type="text/javascript" language="javascript">
+      var aax_size='300x250';
+      var aax_pubname = 'ireadblog-21';
+      var aax_src='302';
+    </script>
+    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    {% endif %}
+    
+  </div>
 </div>
 <!-- END sidebar -->
 
