Add Payment Button

--- a/templates/payment/dashboard.html
+++ b/templates/payment/dashboard.html
@@ -51,6 +51,8 @@
                 <div class="row">
                   <p><strong>Note : The above implementations are for Test Mode only. Please find the Test Cards and UPI Details <a href="https://razorpay.com/docs/payment-gateway/test-card-upi-details/">here</a> for Razorpay and <a href="https://developer.paytm.com/docs/test-instruments/testing-integration/">here</a> for Paytm.</strong></p>
                   <br>
+                  <p>If you're really interested to support us, use the form below:</p>
+                  <iframe id='kofiframe' src='https://ko-fi.com/ireadblog/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px; margin-top: 20px;' height='712' title='ireadblog'></iframe>
                 </div>
           </div>
           {% include "partials/sidebar.html" %}
