--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -105,14 +105,14 @@
       var aax_pubname = 'ireadblog-21';
       var aax_src='302';
     </script>
-    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
     {% else %}
     <script type="text/javascript" language="javascript">
       var aax_size='300x250';
       var aax_pubname = 'ireadblog-21';
       var aax_src='302';
     </script>
-    <script type="text/javascript" language="javascript" src="http://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
     {% endif %}
     
   </div>
