Add Typeform Affiliate

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -108,6 +108,9 @@
       var aax_src='302';
     </script>
     <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    <a href="https://typeform.grsm.io/ireadblog" target="_blank">
+      <img src="{% static 'images/typeform.png' %}" alt="">
+    </a>
     {% else %}
     <script type="text/javascript" language="javascript">
       var aax_size='300x250';
