Add fiverr affiliate

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -108,9 +108,12 @@
       var aax_src='302';
     </script>
     <script type="text/javascript" language="javascript" src="https://c.amazon-adsystem.com/aax2/assoc.js"></script>
+    <br><br>
     <a href="https://typeform.grsm.io/ireadblog" target="_blank">
       <img src="{% static 'images/typeform.png' %}" alt="">
     </a>
+    <br><br>
+    <a href="https://go.fiverr.com/visit/?bta=294862&nci=8396" rel="sponsored"  Target="_Top"><img border="0" src="https://fiverr.ck-cdn.com/tn/serve/?cid=13964112"  width="300" height="600"></a>
     {% else %}
     <script type="text/javascript" language="javascript">
       var aax_size='300x250';
