--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -4,7 +4,7 @@
 {% block title %}Home{% endblock title %} 
 
 {% block content %}
-<section class="site-section pt-5 pb-5">
+<section class=" pt-5 pb-5">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
