--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -35,6 +35,10 @@
     <meta property="og:site_name" content="iRead" />
     <meta property="og:image:type" content="image/jpg" />
     <meta
+      name="keywords"
+      content="iread,blog,iread blog,Python,software development, engineering, rails, javascript, ruby, django, flask, git, github,write"
+    />
+    <meta
       name="google-site-verification"
       content="kCaDsevOB107PNa52WhEleNVU7IrF7zFpT4prbTqrqM"
     />
