--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -117,6 +117,7 @@
           <div class="col-md-12 text-center">
             <nav aria-label="Page navigation" class="text-center">
               <ul class="pagination">
+
                 {% if posts.has_previous %}
                 <li class="page-item">
                   <a
@@ -135,9 +136,25 @@
                   >
                 </li>
                 {% endif %}
-                <li class="page-item">
-                  <a class="page-link active" href="">{{posts.number}}</a>
-                </li>
+
+                {% for i in page_range|default_if_none:posts.paginator.get_elided_page_range %}
+                  {% if posts.number == i %}
+                  <li class="page-item active">
+                    <a class="page-link" href="">{{posts.number}}</a>
+                  </li>
+                  {% else %}
+                    {% if i == posts.paginator.ELLIPSIS %}
+                      <li class="page-item">
+                        <span class="page-link">{{i}}</span>
+                      </li>
+                    {% else %}
+                      <li class="page-item">
+                        <a class="page-link" href="?page={{i}}">{{i}}</a>
+                      </li>
+                    {% endif %}
+                  {% endif %}
+                {% endfor %}
+
                 {% if posts.has_next %}
                 <li class="page-item">
                   <a class="page-link" href="?page={{posts.next_page_number}}"
@@ -149,6 +166,7 @@
                   <a class="page-link" style="pointer-events: none">&gt;</a>
                 </li>
                 {% endif %}
+
               </ul>
             </nav>
           </div>
