Add InfoLink ads

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -117,6 +117,10 @@
 
   <div class="sidebar-box">
     <h3 class="heading">Advertisements</h3>
+    <a href="http://www.infolinks.com/join-us?aid=3348493" target="_blank">
+      <img class="img-fluid" src="{% static 'images/infolink-side2.webp' %}" alt="">
+    </a>
+    <br><br>
     {% if meta_post %}
     <script type="text/javascript">
       amzn_assoc_ad_type = "responsive_search_widget";
@@ -195,6 +199,10 @@
       src="https://c.amazon-adsystem.com/aax2/assoc.js"
     ></script>
     {% endif %}
+    <br><br>
+    <a href="http://www.infolinks.com/join-us?aid=3348493" target="_blank">
+      <img class="img-fluid" src="{% static 'images/infolink-side.webp' %}" alt="">
+    </a>
   </div>
 </div>
 <!-- END sidebar -->
