Add thumbnail in series

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -20,9 +20,15 @@
     <meta name="twitter:description" content="{{post.seo_overview}}" />
     <meta name="twitter:image" content="{{post.thumbnail.url}}" />
     {% elif meta_series %}
+    <meta name="description" content="{{series.desc}}" />
     <meta property="og:title" content="{{series.name}} | iRead" />
     <meta property="og:description" content="{{series.desc}}" />
-    <meta property="og:image" content="{% static 'images/favicon.png' %}" />
+    <meta property="og:image" content="{{series.thumbnail.url}}" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@iReadBot" />
+    <meta name="twitter:title" content="{{series.name}} | iRead" />
+    <meta name="twitter:description" content="{{series.desc}}" />
+    <meta name="twitter:image" content="{{series.thumbnail.url}}" />
     {% else %}
     <meta property="og:title" content="{{title}}" />
     <meta
