--- a/templates/core/series.html
+++ b/templates/core/series.html
@@ -14,6 +14,8 @@
         </div>
         <div class="row blog-entries">
           <div class="col-md-12 col-lg-8 main-content">
+            <img src="{{series.thumbnail.url}}" alt="Image" class="img-fluid mb-5" />
+            <br>
             <p>{{series.desc}}</p>
             <div class="row mb-5 mt-5">
               
