--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1896,3 +1896,12 @@ blockquote p {
     padding-top: 30px;
   }
 }
+
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  background: #6610f2;
+  z-index: 99;
+}
