--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -178,6 +178,14 @@
     </script>
   </head>
   <body>
+    <!-- Back to top button -->
+    <button
+            type="button"
+            class="btn btn-danger btn-floating btn-lg"
+            id="btn-back-to-top"
+            >
+      <i class="fa fa-arrow-up"></i>
+    </button>
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
     <script>
