--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -402,6 +402,8 @@
           onload='var s = document.createElement("script");s.setAttribute("src", "https://npm-assets.fiverrcdn.com/nga/onload_iframe.js");document.body.appendChild(s);'
         ></iframe>
       </div>
+      <div class="px-4" id="amzn-assoc-ad-19369d7b-1a88-41b6-9035-98456d8df8bb"></div>
+      <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=19369d7b-1a88-41b6-9035-98456d8df8bb"></script>
       <footer class="site-footer">
         <div class="container">
           <div class="row">
@@ -624,5 +626,14 @@
       type="text/javascript"
       src="//resources.infolinks.com/js/infolinks_main.js"
     ></script>
+    <script type="text/javascript">
+        amzn_assoc_ad_type = "link_enhancement_widget";
+        amzn_assoc_tracking_id = "ashutoshkrris-20";
+        amzn_assoc_linkid = "61d92996ad8f0ceda598df636f769b93";
+        amzn_assoc_placement = "";
+        amzn_assoc_marketplace = "amazon";
+        amzn_assoc_region = "US";
+    </script>
+    <script src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&MarketPlace=US"></script>
   </body>
 </html>
