--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -597,7 +597,7 @@
     </script>
     <script
       type="text/javascript"
-      src="//resources.infolinks.com/js/infolinks_main.js"
+      src="https://resources.infolinks.com/js/infolinks_main.js"
     ></script>
     <script type="text/javascript">
         amzn_assoc_ad_type = "link_enhancement_widget";
@@ -607,6 +607,6 @@
         amzn_assoc_marketplace = "amazon";
         amzn_assoc_region = "US";
     </script>
-    <script src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&MarketPlace=US"></script>
+    <script src="https://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&MarketPlace=US"></script>
   </body>
 </html>
