--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -136,7 +136,7 @@
       amzn_assoc_theme = "dark";
       amzn_assoc_bg_color = "000000";
     </script>
-    <script src="//z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN"></script>
+    <script src="https://z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN"></script>
     <br />
     <iframe
       src="https://tools.fiverr.com/?searchbox-iframe=1&amp;affid=294862&amp;widget-style=1"
