--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -380,7 +380,7 @@
           </script>
           <script src="https://z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
       </div>
-      <div class="px-4">
+      <div class="px-4 mt-3">
         <script src="https://z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=db69c5a1-22bc-419d-9134-47da3a4b3581"></script>
       </div>
       <div class="px-4">
