--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -11,14 +11,25 @@
 />
 
 <script type="text/javascript">
+
+  function slugify(text)
+    {
+      return text.toString().toLowerCase()
+        .replace(/\s+/g, '-')           // Replace spaces with -
+        .replace(/[^\w\-]+/g, '')       // Remove all non-word chars
+        .replace(/\-\-+/g, '-')         // Replace multiple - with single -
+        .replace(/^-+/, '')             // Trim - from start of text
+        .replace(/-+$/, '');            // Trim - from end of text
+    }
+
+
   function mbtTOC() {
     var mbtTOC = (i = headlength1 = headlength2 = gethead = 0);
     headlength1 = document.getElementById("post-toc").getElementsByTagName("h1")
       .length;
-    if(headlength1 <=0){
-      headlength2 = document.getElementById("post-toc").getElementsByTagName("h2")
+    
+    headlength2 = document.getElementById("post-toc").getElementsByTagName("h2")
       .length;
-    }
     if(headlength1>0){
       for (i = 0; i < headlength1; i++) {
         gethead = document.getElementById("post-toc").getElementsByTagName("h1")[
@@ -28,15 +39,17 @@
           i
         ].innerHTML;
         if(gethead2 != "&nbsp;"){
+          var link = slugify(gethead);
         document
           .getElementById("post-toc")
           .getElementsByTagName("h1")
-          [i].setAttribute("id", "point" + i);
-        mbtTOC = "<li><a href='#point" + i + "'>" + gethead + "</a></li>";
+          [i].setAttribute("id", link);
+        mbtTOC = "<li><a href='#" + link + "'>" + gethead + "</a></li>";
         document.getElementById("mbtTOC").innerHTML += mbtTOC;
       }
     }
-    } else if(headlength2 > 0){
+    } 
+     if(headlength2 > 0){
       for (i = 0; i < headlength2; i++) {
         gethead = document.getElementById("post-toc").getElementsByTagName("h2")[
           i
@@ -45,11 +58,12 @@
           i
         ].innerHTML;
         if(gethead2 != "&nbsp;"){
+          var link = slugify(gethead);
         document
           .getElementById("post-toc")
           .getElementsByTagName("h2")
-          [i].setAttribute("id", "point" + i);
-        mbtTOC = "<li><a href='#point" + i + "'>" + gethead + "</a></li>";
+          [i].setAttribute("id", link);
+        mbtTOC = "<li><a href='#" + link + "'>" + gethead + "</a></li>";
         document.getElementById("mbtTOC").innerHTML += mbtTOC;
     }
   }
